--- a/website/templates/edit.html
+++ b/website/templates/edit.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='edit.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <h1>Edit To-Do</h1>
+    <h1 class="h1">Edit To-Do</h1>
+    <div class="div1">
     <form action="/edit/{{ todo.id }}" method="post">
-        <input type="text" name="task" value="{{ todo.task }}">
-        <button type="submit">Update</button>
+        <h1 class="task" value="{{ todo.task }}">{{ todo.task }} </h1>
+        <div class="input-container">
+        <input class="input" type="text" placeholder="Enter New To-Do" name="task">
+        <button class="submit-button" type="submit">Update</button>
+    </div>
     </form>
-    <a href="/">Back to To-Do List</a>
-    
+    <a class="back-button" href="/">Back to To-Do List</a>
+</div>
+</div>
 </body>
 </html>
