--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -12,7 +12,9 @@
         <ul>
             <li>
                 <a class="login-button" href="{{ url_for('auth.Signup_Home') }}">Sign-Up</a>
-                <a class="login-button">Login</a>
+                <a class="login-button" href="{{ url_for('auth.login_Home') }}">Login</a>
+                <a class="login-button" href="{{ url_for('my_view.home') }}">Home</a>
+                <a class="login-button" href="{{ url_for('auth.Logout') }}">Log Out</a>
             </li>
         </ul>
     </nav>
